Download feeds from Google reader fixed wrapping of feed titles in folder view connected buttons for mark all read and view all / unread

--- a/chrome/css/styles.css
+++ b/chrome/css/styles.css
@@ -57,8 +57,9 @@ div.itemTitleRead {
 }
 
 td.itemFeedName {
-  width: 100px;
+  width: 155px;
   overflow: hidden;
+  white-space: nowrap;
 }
 
 td.itemDateTime {
